<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- iphone_13_mini___Page4 strings -->

    <string name="app_name">Page 1</string>
    <string name="tell_us_more_about_you__string">Tell us more about you!</string>
    <string name="hobbies____string">Hobbies...</string>
    <string name="describe_yourself____string">Describe yourself...</string>
    <string name="living_situation____string">Living situation...</string>

    <string-array name="college_options">
        <item>College 12345</item>
        <item>College 12345</item>

        <item>College 12345</item>
        <item>College 12345</item>
        <item>College 12345</item>
        <item>College 12345</item>

        <!-- Add more colleges if needed -->
    </string-array>


    <string-array name="religion_options">
        <item>Christianity</item>
        <item>Islam</item>
        <item>Judaism</item>
        <item>Buddhism</item>
        <item>Hinduism</item>
        <item>Other</item>
    </string-array>

    <!-- iphone_13_mini___hesham strings -->

    <string name="home_string">Home</string>
    <string name="find_a_roommate_without_an_apartment_string">Find a roommate without an apartment</string>
    <string name="find_a_roommate_with_an_apartment_string">Find a roommate with an apartment</string>
    <string name="username_label" />
    <string name="user_data_null" />
    <string name="user_not_found" />
    <string name="read_user_data_failed" />
    <string name="user_id_label" />
    <string name="user_id_missing" />


    <string name="no_interests_available">No interests available</string>
    <string name="unblock_user" />
    <string name="block_user" />


    <string name="ek_img_content">ExportKit Image</string>
    <string name="welcome_to_roofmate___string">Welcome to RoofMate !</string>
    <string name="user_name____string">User Name...</string>
    <string name="email____string">Email...</string>
    <string name="submit_string">Submit</string>
    <string name="password____string">Password...</string>
    <string name="age_string">Age</string>
    <string name="gender_string">Gender</string>

    <string name="mia_sorloth_string">Mia Sorloth</string>
    <string name="yesterday___13_01_string">Yesterday , 13:01</string>


    <string name="room_mates_string">Room Mates</string>
    <string name="ava_morgan_string">Ava Morgan</string>
    <string name="__description__string">*description*</string>
    <string name="__match__string">*match*</string>
    <string name="review____string">review...</string>

    <string name="enter_the_location____string">Enter the location...</string>
    <string name="apartments_string">Apartments</string>
    <string name="location__string">Location:</string>
    <string name="price__monthly___string">Price (monthly):</string>
    <string name="rooms_number__string">Rooms Number:</string>
    <string name="pick_number____string">Pick number...</string>
    <string name="price____string">Price...</string>
</resources>