<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >

	<ScrollView android:id="@+id/iphone_13_mini___13" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_iphone_13_mini___13_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__iphone_13_mini___13_ek2"
					android:background="@drawable/_bg__iphone_13_mini___13_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="411dp"
					android:layout_height="812dp" />

				<TextView android:id="@+id/enter_the_location___"
					android:textStyle="bold"
					android:textSize="23sp"
					android:textColor="@color/enter_the_location____color"
					android:layout_marginLeft="63dp"
					android:layout_marginTop="207dp"
					android:layout_width="271.5dp"
					android:layout_height="42.5dp"
					android:text="@string/enter_the_location____string"
					 />

				<ImageView android:id="@+id/image_2"
					android:src="@drawable/image_2"
					android:contentDescription="image_2"
					 android:layout_marginStart="-8dp"
					android:layout_marginTop="9dp"
					android:layout_width="130dp"
					android:layout_height="92dp" />

				<TextView android:id="@+id/apartments"
					android:textStyle="bold"
					android:textSize="28sp"
					android:textColor="@color/apartments_color"
					android:layout_marginLeft="122dp"
					android:layout_marginTop="46dp"
					android:layout_width="175dp"
					android:layout_height="54dp"
					android:text="@string/apartments_string"
					 />

				<View   android:id="@+id/line_1"
					android:background="@drawable/line_1_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="92dp"
					android:layout_width="374.9dp"
					android:layout_height="3dp" />

				<View   android:id="@+id/line_2"
					android:background="@drawable/line_2_shape"
					 android:layout_marginStart="19dp"
					android:layout_marginTop="298dp"
					android:layout_width="330dp"
					android:layout_height="2dp" />

				<View   android:id="@+id/line_3"
					android:background="@drawable/line_3_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="720dp"
					android:layout_width="374.9dp"
					android:layout_height="1.7dp" />



				<RelativeLayout android:id="@+id/clarity_house_line"
					android:layout_marginTop="739dp"
					android:layout_marginStart="24dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/vector"
						android:src="@drawable/vector"
						android:contentDescription="vector"
						 android:layout_marginStart="3.72dp"
						android:layout_marginTop="3.33dp"
						android:layout_width="57.56dp"
						android:layout_height="28.25dp" />

					<ImageView android:id="@+id/vector_ek1"
						android:src="@drawable/vector_ek1"
						android:contentDescription="vector_ek1"
						 android:layout_marginStart="10.83dp"
						android:layout_marginTop="29.6dp"
						android:layout_width="43.33dp"
						android:layout_height="27.07dp" />

					<ImageView android:id="@+id/vector_ek2"
						android:src="@drawable/vector_ek2"
						android:contentDescription="vector_ek2"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="65dp"
						android:layout_height="60dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/group"
					android:layout_marginTop="748dp"
					android:layout_marginStart="130.42dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/vector_ek3"
						android:src="@drawable/vector_ek3"
						android:contentDescription="vector_ek3"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="31dp"
						android:layout_width="60.28dp"
						android:layout_height="18.75dp" />

					<ImageView android:id="@+id/vector_ek4"
						android:src="@drawable/vector_ek4"
						android:contentDescription="vector_ek4"
						 android:layout_marginStart="19dp"
						android:layout_marginTop="0dp"
						android:layout_width="22.6dp"
						android:layout_height="18.75dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/ph_star"
					android:layout_marginTop="744dp"
					android:layout_marginStart="208dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/vector_ek5"
						android:src="@drawable/vector_ek5"
						android:contentDescription="vector_ek5"
						 android:layout_marginStart="4.06dp"
						android:layout_marginTop="3.75dp"
						android:layout_width="56.87dp"
						android:layout_height="50.62dp" />

					<ImageView android:id="@+id/vector_ek6"
						android:src="@drawable/vector_ek6"
						android:contentDescription="vector_ek6"
						 android:layout_marginStart="135dp"
						android:layout_marginTop="103dp"
						android:layout_width="139dp"
						android:layout_height="144dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/token_chat"
					android:layout_marginTop="738dp"
					android:layout_marginStart="285dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/vector_ek7"
						android:src="@drawable/vector_ek7"
						android:contentDescription="vector_ek7"
						 android:layout_marginStart="16.07dp"
						android:layout_marginTop="17.41dp"
						android:layout_width="42.86dp"
						android:layout_height="40.18dp" />

					<ImageView android:id="@+id/vector_ek8"
						android:src="@drawable/vector_ek8"
						android:contentDescription="vector_ek8"
						 android:layout_marginStart="25.45dp"
						android:layout_marginTop="32.14dp"
						android:layout_width="22.77dp"
						android:layout_height="5.36dp" />

				</RelativeLayout>

				<View   android:id="@+id/line_7"
					android:background="@drawable/line_7_shape"
					 android:layout_marginStart="19dp"
					android:layout_marginTop="480dp"
					android:layout_width="330dp"
					android:layout_height="2dp" />

				<TextView android:id="@+id/location_"
					android:textStyle="bold"
					android:textSize="25sp"
					android:textColor="@color/location__color"
					android:layout_marginLeft="21dp"
					android:layout_marginTop="127dp"
					android:layout_width="273.5dp"
					android:layout_height="43.5dp"
					android:text="@string/location__string"
					 />

				<View   android:id="@+id/rectangle_29"
					android:background="@drawable/rectangle_29_shape"
					android:layout_marginStart="41dp"
					android:layout_marginTop="190dp"
					android:layout_width="288dp"
					android:layout_height="64dp" />

				<Button   android:id="@+id/location"
					android:background="@drawable/rectangle_29_shape"
					android:layout_marginStart="41dp"
					android:layout_marginTop="190dp"
					android:layout_width="288dp"
					android:layout_height="64dp"
					android:visibility="invisible"/>

				<TextView android:id="@+id/price__monthly__"
					android:textStyle="bold"
					android:textSize="25sp"
					android:textColor="@color/location__color"
					android:layout_marginLeft="21dp"
					android:layout_marginTop="320dp"
					android:layout_width="273.5dp"
					android:layout_height="43.5dp"
					android:text="@string/price__monthly___string"
					 />

				<View   android:id="@+id/rectangle_30"
					android:background="@drawable/rectangle_30_shape"
					 android:layout_marginStart="41dp"
					android:layout_marginTop="383dp"
					android:layout_width="130dp"
					android:layout_height="60dp" />

				<TextView android:id="@+id/rooms_number_"
					android:textStyle="bold"
					android:textSize="25sp"
					android:textColor="@color/location__color"
					android:layout_marginLeft="21dp"
					android:layout_marginTop="507dp"
					android:layout_width="273.5dp"
					android:layout_height="43.5dp"
					android:text="@string/rooms_number__string"
					 />

				<View   android:id="@+id/rectangle_32"
					android:background="@drawable/rectangle_32_shape"
					 android:layout_marginStart="36dp"
					android:layout_marginTop="560dp"
					android:layout_width="170dp"
					android:layout_height="60dp" />

				<EditText android:id="@+id/number"
					android:textStyle="bold"
					android:textSize="23sp"
					android:textColor="@color/enter_the_location____color"
					android:layout_marginLeft="46dp"
					android:layout_marginTop="574dp"
					android:layout_width="271.5dp"
					android:layout_height="48.5dp"
					android:text="@string/pick_number____string"
					 />

				<View   android:id="@+id/rectangle_33"
					android:background="@drawable/rectangle_33_shape"
					 android:layout_marginStart="258dp"
					android:layout_marginTop="644dp"
					android:layout_width="90dp"
					android:layout_height="50dp" />

				<Button android:id="@+id/submit"
					android:textStyle="bold"
					android:textSize="22sp"
					android:textColor="@color/location__color"
					android:layout_marginLeft="270dp"
					android:layout_marginTop="656dp"
					android:layout_width="103dp"
					android:layout_height="37dp"
					android:text="@string/submit_string"
					android:visibility="invisible"
					android:onClick="submitPost"
					 />
				<TextView android:id="@+id/submit_ss"
					android:textStyle="bold"
					android:textSize="23sp"
					android:textColor="@color/enter_the_location____color"
					android:layout_marginLeft="270dp"
					android:layout_marginTop="656dp"
					android:layout_width="103dp"
					android:layout_height="37dp"
					android:text="submit"
					/>

				<EditText android:id="@+id/price"
					android:textStyle="bold"
					android:textSize="23sp"
					android:textColor="@color/enter_the_location____color"
					android:layout_marginLeft="55dp"
					android:layout_marginTop="399dp"
					android:layout_width="114.5dp"
					android:layout_height="49.5dp"
					android:text="@string/price____string"
					 />

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>